commit before dealing with z-index issue in hero block

--- a/app/scss/components/_one-column-block.scss
+++ b/app/scss/components/_one-column-block.scss
@@ -17,7 +17,7 @@
     text-align: center;
 
     &.font-size--large {
-      font-size: clamp(2.4rem, 6vw, 6rem);
+      font-size: clamp(2.4rem, 6vw, 5.6rem);
       line-height: 1;
     }
   } 
